styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;900");
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");

*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --text-primary: #333;
  --text-secondary: #7a7a7a;
  --text-light: #fff;
  --primary-section: #f3f5f3;
  --input-border: #d8d8da;
  --pass-border: #008000;
  --fail-border: #ff0000;
  --footer-bg: #555;
  --swatch-border: #000;
  --warning-text: #9f6000;
  --warning-bg: #feefb3;
  --warning-link: #c77b09;
  --warning-link-hover: #eb9617;
  --info-text: #059;
  --info-bg: #bef;
}

body {
  font-family: "Inter", sans-serif;
  font-variation-settings: "wght" 450;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  color: var(--text-primary);
}

.letter-spacing {
  letter-spacing: -0.045em;
}

section {
  margin-bottom: 4rem;
}

p {
  font-size: 1.25rem;
}

.result-field {
  border: 1px solid lightgrey;
  border-radius: 2px;
  margin: 2rem 0;
  padding: 2rem;
}

input {
  font-size: 1.125rem;
  padding: 1rem;
  width: 15rem;
  height: 1.75rem;
  border-radius: 0.375rem;
  border: none;
  background-color: var(--primary-section);
}

footer {
  background-color: var(--footer-bg);
  color: var(--text-light);
}

footer p {
  text-align: center;
}

.primary {
  background-color: var(--primary-section);
}

.container {
  width: 80%;
  max-width: 1100px;
  margin: 0 auto;
  padding: 0.25rem 0;
}

.heading {
  margin: 3rem 0;
}

.page-title {
  font-size: 2rem;
  font-variation-settings: "wght" 900;
  text-align: center;
  margin-bottom: 1rem;
}

.description {
  color: var(--text-secondary);
  text-align: center;
}

.large {
  margin: 0px;
  font-size: 2.5rem;
  font-variation-settings: "wght" 650;
}

.inputs-row {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  margin: 0.5rem 0;
}

.error-box {
  margin: 10px auto;
  padding: 10px;
  border-radius: 3px;
  width: 80%;
}

#warning-box {
  color: var(--warning-text);
  background-color: var(--warning-bg);
}

.error-text {
  font-size: 1rem;
  margin: 5px 20px;
  line-height: 1.5rem;
}

.error-text > i {
  margin-right: 10px;
}

.error-text > a {
  color: var(--warning-link);
}

.error-text > a:hover {
  color: var(--warning-link-hover);
}

.hidden {
  display: none;
}

#info-box {
  color: var(--info-text);
  background-color: var(--info-bg);
}

.result-row {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 2rem 0 0 0;
}

.ratio-result,
.check-result {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.text-small {
  font-size: 1.15rem;
}

.ratio-result {
  margin: 0 2rem;
  padding: 1rem;
}

.level-labels {
  margin: 1.5rem 0 1rem 0;
  display: flex;
  justify-content: space-around;
  font-variation-settings: "wght" 600;
}

.level {
  width: 3rem;
}

.icons {
  margin: 1rem 0;
  display: flex;
  justify-content: space-around;
}
.input-items {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid var(--input-border);
  padding: 0.5rem;
  border-radius: 10px;
  margin: 0.3rem 0;
}

.input-fields {
  font-size: 1.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  justify-content: center;
  align-items: flex-start;
}

.input-fields label {
  font-size: 1.4rem;
}

.swatch-one,
.swatch-two {
  display: inline-block;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 0.375rem;
  box-shadow: inset var(--swatch-border) 0 0 0 1px;
  margin: 0.2rem;
}

/* Need to set the swatches with JS */
.swatch-one {
  background-color: white;
}

.swatch-two {
  background-color: black;
}

.pass,
.fail {
  display: inline-block;
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  text-align: center;
  vertical-align: 50%;
}

.pass {
  border: 3px solid var(--pass-border);
  color: var(--pass-border);
}

.fail {
  border: 3px solid var(--fail-border);
  color: var(--fail-border);
}

.secondary .container h2 {
  font-variation-settings: "wght" 800;
}

.secondary .container h3 {
  font-variation-settings: "wght" 650;
}

.secondary .container p {
  font-size: 0.95rem;
  line-height: 1.7em;
}

.secondary .container ul > li {
  font-size: 0.95rem;
  line-height: 1.7em;
}

strong {
  font-variation-settings: "wght" 700;
}

small {
  font-size: 0.9em;
}

.sr-only {
  position: absolute;
  left: -10000px;
  width: 1px;
  height: 1px;
  top: auto;
  overflow: hidden;
}

@media (min-width: 601px) {
  .page-title {
    font-size: 2.9rem;
  }

  .result-row {
    flex-direction: row;
    align-items: flex-start;
    gap: 1rem;
  }

  .error-box {
    width: 70%;
  }
}

@media (min-width: 768px) {
  .inputs-row {
    flex-direction: row;
    align-items: flex-end;
    gap: 1rem;
  }

  .input-items {
    align-self: center;
  }
}

